force-app/main/default/objects/MembershipContactAssotiation__c/MembershipContactAssotiation__c.object-meta.xml
<CustomObject>
    <label>Membership Status</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Membership Status</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>