force-app/main/default/objects/MembershipContactAssotiation__c/fields/Application_form__c.field-meta.xml
<CustomField>
    <fullName>Application_form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application form</label>
    <referenceTo>Application_form__c</referenceTo>
    <relationshipName>MembershipContactAssotiations</relationshipName>
    <type>Lookup</type>
</CustomField>