force-app/main/default/objects/MembershipContactAssotiation__c/fields/crdate__c.field-meta.xml
<CustomField>
    <fullName>crdate__c</fullName>
    <label>crdate</label>
    <type>DateTime</type>
</CustomField>