force-app/main/default/objects/MembershipContactAssotiation__c/fields/Do_Call_For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Do_Call_For_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in trigger to create &apos;Email Activity&apos;. After processing will be unchecked.</description>
    <label>Do Call For Renewal</label>
    <type>Checkbox</type>
</CustomField>