force-app/main/default/objects/MembershipContactAssotiation__c/fields/Email_Activity__c.field-meta.xml
<CustomField>
    <fullName>Email_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Call For Renewal</label>
    <referenceTo>Email_Activity__c</referenceTo>
    <relationshipLabel>Membership Status</relationshipLabel>
    <relationshipName>Membership_Status</relationshipName>
    <type>Lookup</type>
</CustomField>