force-app/main/default/objects/MembershipContactAssotiation__c/fields/Endless_Activation__c.field-meta.xml
<CustomField>
    <fullName>Endless_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endless Activation</label>
    <type>Checkbox</type>
</CustomField>