force-app/main/default/objects/MembershipContactAssotiation__c/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <description>Date when current membership expires</description>
    <label>Expiration date</label>
    <type>DateTime</type>
</CustomField>