force-app/main/default/objects/MembershipContactAssotiation__c/fields/fe_users_id__c.field-meta.xml
<CustomField>
    <fullName>fe_users_id__c</fullName>
    <label>fe_users_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>