force-app/main/default/objects/MembershipContactAssotiation__c/fields/Flag_Suppress_Renewal_Email__c.field-meta.xml
<CustomField>
    <fullName>Flag_Suppress_Renewal_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Suppress Renewal Email</label>
    <type>Checkbox</type>
</CustomField>