force-app/main/default/objects/MembershipContactAssotiation__c/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <formula>Membership__r.Hierarchy__c</formula>
    <label>Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>