force-app/main/default/objects/MembershipContactAssotiation__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Indicates if this membership is active. This field use formula. The membership won&apos;t be active in this year if it expires in next one.</description>
    <formula>IF( Endless_Activation__c  = true, true, Expiration_date__c &gt;= DATETIMEVALUE( TODAY() ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>