force-app/main/default/objects/MembershipContactAssotiation__c/fields/Last_Call_For_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_For_Renewal_Date__c</fullName>
    <formula>Email_Activity__r.CreatedDate</formula>
    <label>Last Call For Renewal Date</label>
    <type>DateTime</type>
</CustomField>