force-app/main/default/objects/MembershipContactAssotiation__c/fields/Membership_Price__c.field-meta.xml
<CustomField>
    <fullName>Membership_Price__c</fullName>
    <description>This field displays the membership price of the related order.</description>
    <formula>Application_form__r.Order__r.Total_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field displays the membership price of the related order.</inlineHelpText>
    <label>Membership Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>