force-app/main/default/objects/MembershipContactAssotiation__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Status</label>
    <referenceTo>MembershipContactAssotiation__c</referenceTo>
    <relationshipLabel>MembershipContactAssotiations</relationshipLabel>
    <relationshipName>MembershipContactAssotiations</relationshipName>
    <type>Lookup</type>
</CustomField>