force-app/main/default/objects/MembershipContactAssotiation__c/fields/Next_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Membership_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Renewed &apos;Membership Status&apos; for the next year (used in list view to filter renewed statuses)</description>
    <label>Next Membership Status</label>
    <referenceTo>MembershipContactAssotiation__c</referenceTo>
    <relationshipLabel>Previous Membership Status</relationshipLabel>
    <relationshipName>Next_Membership_Status</relationshipName>
    <type>Lookup</type>
</CustomField>