force-app/main/default/objects/MembershipContactAssotiation__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>This field displays the payment date of the related order.</description>
    <formula>Application_form__r.Order__r.Payment_Date__c</formula>
    <inlineHelpText>This field displays the payment date of the related order.</inlineHelpText>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>