force-app/main/default/objects/MembershipContactAssotiation__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>TEXT(Application_form__r.Order__r.Payment_Method__c)</formula>
    <inlineHelpText>This field displays the payment method of the related order.</inlineHelpText>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>