force-app/main/default/objects/MembershipContactAssotiation__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>This field displays the payment status of the related order.</description>
    <formula>TEXT(Application_form__r.Order__r.Status__c)</formula>
    <inlineHelpText>This field displays the payment status of the related order.</inlineHelpText>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>