force-app/main/default/objects/MembershipContactAssotiation__c/fields/Renewal_Application_Form__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Application_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Application Form</label>
    <referenceTo>Application_form__c</referenceTo>
    <relationshipLabel>Membership Status (Renewal Application Form)</relationshipLabel>
    <relationshipName>Prev_Membership_Status</relationshipName>
    <type>Lookup</type>
</CustomField>