force-app/main/default/objects/MembershipContactAssotiation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Officer</fullName>
            </value>
            <value>
                <fullName>Carer</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Corresponding member</fullName>
            </value>
            <value>
                <fullName>GroupAdmin</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Individual Delegate</fullName>
            </value>
            <value>
                <fullName>Managing Editor</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>New Member</fullName>
            </value>
            <value>
                <fullName>Past president</fullName>
            </value>
            <value>
                <fullName>RRFS Member</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Panel Member (Institution)</fullName>
                <isActive>false</isActive>
                <label>Panel Member (Institution)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>