force-app/main/default/objects/MembershipContactAssotiation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>added with Membership Renewal</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>