force-app/main/default/objects/MembershipContactAssotiation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Contact__c</columns>
    <columns>IsActive__c</columns>
    <columns>Expiration_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>