force-app/main/default/objects/MembershipContactAssotiation__c/listViews/Call_For_Renewal.listView-meta.xml
<ListView>
    <fullName>Call_For_Renewal</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Contact__c</columns>
    <columns>IsActive__c</columns>
    <columns>Expiration_date__c</columns>
    <columns>Do_Call_For_Renewal__c</columns>
    <columns>Email_Activity__c</columns>
    <columns>Last_Call_For_Renewal_Date__c</columns>
    <columns>Renewal_Application_Form__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Membership__c</field>
        <operation>notEqual</operation>
        <value>Associate membership</value>
    </filters>
    <filters>
        <field>Membership__c</field>
        <operation>notEqual</operation>
        <value>Full Institutional membership</value>
    </filters>
    <filters>
        <field>Membership__c</field>
        <operation>notEqual</operation>
        <value>Associate Corresponding Membership</value>
    </filters>
    <filters>
        <field>Membership__c</field>
        <operation>notEqual</operation>
        <value>Corresponding Institutional Members</value>
    </filters>
    <filters>
        <field>Membership__c</field>
        <operation>notEqual</operation>
        <value>Honorary Members</value>
    </filters>
    <filters>
        <field>Renewal_Application_Form__c</field>
        <operation>equals</operation>
    </filters>
    <label>Call For Renewal</label>
    <language>en_US</language>
</ListView>