force-app/main/default/objects/MembershipContactAssotiation__c/listViews/My_Active_Memberships.listView-meta.xml
<ListView>
    <fullName>My_Active_Memberships</fullName>
    <columns>Membership__c</columns>
    <columns>Assignment_date__c</columns>
    <columns>Expiration_date__c</columns>
    <columns>Hierarchy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Active Memberships</label>
</ListView>