force-app/main/default/objects/MembershipContactAssotiation__c/listViews/My_Memberships.listView-meta.xml
<ListView>
    <fullName>My_Memberships</fullName>
    <columns>Membership__c</columns>
    <columns>IsActive__c</columns>
    <columns>Expiration_date__c</columns>
    <columns>Renewal_Application_Form__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2018 12:00 AM</value>
    </filters>
    <label>My Memberships</label>
</ListView>