force-app/main/default/objects/MembershipContactAssotiation__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Membership__c</columns>
    <columns>Application_form__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Open</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>